<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CadastroActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:hint="@string/txtName"
            android:ems="10"
            android:id="@+id/etNome" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="80dp" app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:text=""
            android:hint="@string/txtLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/etSobrenome" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/etNome" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <EditText
            android:text=""
            android:hint="@string/txtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/etEmail" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/etSobrenome" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <EditText
            android:hint="@string/txtPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etSenha" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btCadastrar" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/etSenha" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
</android.support.constraint.ConstraintLayout>