<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".featureCadastroGames.CadastroGameActivity">

    <EditText
            android:hint="@string/title_Hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitulo" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="48dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:hint="@string/description_hint"
            android:layout_width="0dp"
            android:layout_height="161dp"
            android:id="@+id/tvDescricao" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitulo" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btCadastrar" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/tvDescricao"
            style="@style/Widget.AppCompat.Button.Colored"/>
    <Button
            android:text="@string/share_button2"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btShare" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/btCadastrar" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            style="@style/Widget.AppCompat.Button.Colored"/>

</android.support.constraint.ConstraintLayout>